[metadata]
name= libtwitter
version= 0.0.1
author= Bianca Soares
author_email= biancasousa439@gmail.com
description= Pacote para pesquisar e processar tweets
long_description= file: README.md
long_description_content_type= text/markdown
url= https://github.com/bianca-01/LibTwitter
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        

[options]
package_dir = 
        = src
packages = find:
python_requires = >=3.8


[options.packages.find]
where = src

