[metadata]
name= libtwitter
version= 0.0.7
author= Bianca Soares, Joanny Pacheco
author_email= biancasousa439@gmail.com
description= Pacote para pesquisar e processar tweets
long_description= file: README.md
long_description_content_type= text/markdown
url= https://github.com/bianca-01/libtwitter
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        

[options]
package_dir = 
        = libtwitter
packages = find:
python_requires = >=3.8
install_requires = 
        oauth2
        pandas>=1.3.0
        wordcloud>=1.8.1
        matplotlib>=3.4.2



[options.packages.find]
where = libtwitter

